fix code spans being too tall

--- a/etc/style.css
+++ b/etc/style.css
@@ -211,6 +211,8 @@ s {
 code {
   border-width: 1px;
   border-style: solid;
+  display: inline-block;
+  line-height: 1.4;
 }
 
 /* home page */
